--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java-version>1.6</java-version>
-		<spring.version>3.1.0.RELEASE</spring.version>
+		<spring.version>3.1.1.RELEASE</spring.version>
 		<org.aspectj-version>1.7.0</org.aspectj-version>
-		<org.slf4j-version>1.7.2</org.slf4j-version>
 		<ch.qos.logback-version>1.0.7</ch.qos.logback-version>
 		<org.apache.tiles-version>3.0.1</org.apache.tiles-version>
+		<hibernate-version>3.5.6-Final</hibernate-version>
 	</properties>
 
 	<dependencies>
@@ -28,6 +28,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+
 
 		<!-- Spring 3 dependencies -->
 		<dependency>
@@ -86,7 +93,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.2.0.Final</version>
+			<version>${hibernate-version}</version>
 		</dependency>
 
 		<dependency>
@@ -100,7 +107,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-annotations</artifactId>
-			<version>3.5.6-Final</version>
+			<version>${hibernate-version}</version>
 		</dependency>
 
 
