--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>3.3.0.ga</version>
+			<version>3.2.0.Final</version>
 		</dependency>
 
 
