--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,13 @@
 		</dependency>
 		<!-- JSTL library dependencies end -->
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
